<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/color_background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/calculate_your_age"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/age"
        android:padding="15dp"
        android:textColor="@color/txtColorAge"
        android:background="@color/textBackground"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:layout_marginTop="15dp"
        android:background="@color/txtColorAge"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/selectdateColor"
        />

    <TextView
        android:id="@+id/tvSelectDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/selectdate"
        android:layout_marginTop="20sp"
        android:textSize="20sp"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/selectdateColor"
        android:text="@string/selected_date"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tvSelectDateInMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/selectdateColor"
        android:layout_marginTop="20sp"
        android:textSize="35sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/selectdateColor"
        android:text="@string/select_date_in_minutes"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tvSelectDateInDays"
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/selectdateColor"
        android:textSize="35sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/selectdateColor"
        android:text="@string/select_date_in_days"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tvSelectDateInYears"
        android:layout_marginTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/selectdateColor"
        android:textSize="35sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/selectdateColor"
        android:text="@string/age_in_years"
        android:textSize="18sp"/>

</LinearLayout>